# MLP

./: .gitignore  CMakeLists.txt
src/: ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  Network.cpp  Network.h  g_tests  main.cpp  main_new.cpp
src/forms/: messages.ui  view.ui
src/headers/: ActivateFunction.h  Dataset.h  Edge.h  Function.h  Layer.h  Matrix.h  Network.h  NeuralNetwork.h  Neuron.h  StateController.h  StateMessage.cpp  StateMessage.h  converter.h  drawarea.h  edge.h  function.h  layer.h  mainwindow.h  matrix.h  messages.h  neural_network.h  neuron.h  state_message.h  statecontroller.h
src/sources/: ActivateFunction.cpp  Dataset.cpp  Edge.cpp  Function.cpp  Layer.cpp  Matrix.cpp  Network.cpp  NeuralNetwork.cpp  Neuron.cpp  StateController.cpp  converter.cpp  drawarea.cpp  edge.cpp  function.cpp  layer.cpp  mainwindow.cpp  matrix.cpp  messages.cpp  neural_network.cpp  neuron.cpp  not_main.cpp  state_message.cpp  statecontroller.cpp
src/tests/: algorithms_tests.cpp  graph_tests.cpp  tests.cpp
src/tests/test_files/: 2layers_amount_less.mlp  2layers_amount_more.mlp  2layers_colLayer.mlp  2layers_counter.mlp  2layers_header.mlp  2layers_layer.mlp  test_mnist.txt
src_data/: Config.txt  Weights_1.txt  Weights_2.mlp  Weights_4.txt  Weights_5.txt
src_data/Etalon_W/: 2layers.mlp  3layers.mlp  5layers.mlp  5layers_20.mlp  Weights_1.txt  Weights_2.txt  Weights_3.txt
src_data/Etalon_W/weights/: 2_h.txt  3_h.txt  4_h.txt  5_h.txt
src_data/new_weights/: 2layers.mlp  4layers.mlp  5layers_15.mlp
